--- a/views/user/includes/footer.twig
+++ b/views/user/includes/footer.twig
@@ -55,6 +55,8 @@
             </div>
             <div class="modal-body">
                 <form class="mt-0" id="inviteForm">
+                    <div class="col-md-12 ">
+                    <label class="form-label">Client Email</label>
                     <div class="form-group">
                         <div class="input-group mb-3">
                                                             <span class="input-group-text">
@@ -65,9 +67,21 @@
                                                                 </svg>
                                                             </span>
                             <input type="text" class="form-control" placeholder="Email" name="email" >
+                            <div class="col-md-12 mt-3">
+                                <div class="">
+                                    <label class="form-label">Associates</label>
+                                    <select class="form-control form-control-solid" aria-label="Associates" id="associates_id" name="associates_id">
+                                        <option  disabled selected>Choose Associate</option>
+                                        {% for memberInfos in memberInfoss %}
+                                            <option value="{{ memberInfos.id }}">{{ memberInfos.fname }} {{ memberInfos.lname }}</option>
+                                        {% endfor %}
+                                    </select>
+                                </div>
+                            </div>
                             <input type="hidden" name="firm_id" value="{{ loginId }}" >
                             <input type="hidden" name="csrf" value="{{csrf}}">
                         </div>
+                    </div>
                     </div>
                     <div class="d-none">
                         <div class="custom-control custom-radio custom-control-inline ml-4" style="padding-left: 40px;">
@@ -142,6 +156,15 @@
                          data-kt-scroll-max-height="auto" data-kt-scroll-dependencies="#kt_modal_add_user_header"
                          data-kt-scroll-wrappers="#kt_modal_add_user_scroll" data-kt-scroll-offset="300px"
                          style="max-height: 570px;">
+                        <div class="fv-row mb-7 fv-plugins-icon-container">
+                            <label class="form-label">Associates</label>
+                            <select class="form-control form-control-solid" aria-label="Associates" id="associates_add_id" name="associates_add_id">
+                                <option  disabled selected>Choose Associate</option>
+                                {% for memberInfos in memberInfoss %}
+                                    <option value="{{ memberInfos.id }}">{{ memberInfos.fname }} {{ memberInfos.lname }}</option>
+                                {% endfor %}
+                            </select>
+                        </div>
                         <div class="fv-row mb-7 fv-plugins-icon-container">
                             <label class="form-label">First name</label>
                             <input type="text" class="form-control form-control-solid" id="fname_client" name="fname" placeholder="First Name">
@@ -297,7 +320,6 @@
     });
 
 </script>
-
 <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 <script>
     $(document).ready(function() {
@@ -312,9 +334,7 @@
         }, 2000); // adjust this value as needed
 
     });
-
 </script>
-
 <script>
     function send_invite_associate() {
         var form_Data = new FormData(document.getElementById("inviteAssociate"));
@@ -378,6 +398,9 @@
                 } else if (dataResult == 3) {
                     document.getElementById('btn-profile').disabled = false;
                     toastr.error("Email Already Exist");
+                }else if (dataResult == 4) {
+                    document.getElementById('btn-profile').disabled = false;
+                    toastr.error("Please Assign Associate");
                 }else {
                     document.getElementById('btn-profile').disabled = false;
                     toastr.error('Somthing Went Wrong.');
@@ -387,6 +410,7 @@
         });
     }
     function add_Client() {
+        var associates_add_id = $("#associates_add_id").val();
         var fname = $("#fname_client").val();
         var lname = $("#lname_client").val();
         var phone = $("#phone_client").val();
@@ -405,6 +429,7 @@
                     url: '/user/add_user',
                     data: {
                         add_Client: "add_Client",
+                        associates_add_id: associates_add_id,
                         fname: fname,
                         lname: lname,
                         phone: phone,
@@ -437,7 +462,11 @@
                             document.getElementById('btn').disabled = false;
                             document.getElementById("btn").innerHTML = "ADD";
                             toastr.error("Email Already Exist. Login to continue.");
-                        } else {
+                        } else if (response_client == 5) {
+                            document.getElementById('btn').disabled = false;
+                            document.getElementById("btn").innerHTML = "ADD";
+                            toastr.error("Please Assign Associate");
+                        }else {
                             document.getElementById('btn').disabled = false;
                             document.getElementById("btn").innerHTML = "ADD";
                             toastr.error('Somthing Went Wrong.');
@@ -738,7 +767,55 @@
     {#});#}
 
 </script>
+<script>
+    function manage(accountId) {
+// add spinner to button
+        $(this).html('<i class="fa fa-circle-o-notch fa-spin"></i> loading...');
+        var csrf_token = $("input[name=csrf]").val();
+        $.ajax({
+            url: '/user/member/login_as_client',
+            type: 'POST',
+            data: {
+                client_id: accountId,
+                csrf: csrf_token
+            }, success: function (data) {
+                if (data == 1) {
+                    toastr.success('login in Successfully.');
+                    setTimeout(function() {
+                        window.location.href='/user/dashboard';
+                    }, 2000);
+                } else {
+                    toastr.error('Something went wrong.');
+
+                }
+            }
+        });
+    }
 
 
+    function BackToMember(accountId) {
+// add spinner to button
+        $(this).html('<i class="fa fa-circle-o-notch fa-spin"></i> loading...');
+        var csrf_token = $("input[name=csrf]").val();
+        $.ajax({
+            url: '/user/member/login_as_member',
+            type: 'POST',
+            data: {
+                member_id: accountId,
+                csrf: csrf_token
+            }, success: function (data) {
+                if (data == 1) {
+                    toastr.success('login in Successfully.');
+                    setTimeout(function() {
+                        window.location.href='/user/dashboard';
+                    }, 2000);
+                } else {
+                    toastr.error('Something went wrong.');
+
+                }
+            }
+        });
+    }
+</script>
 </body>
 </html>
