--- a/views/user/profile/billing.twig
+++ b/views/user/profile/billing.twig
@@ -82,6 +82,7 @@
                                     </div>
 
                                 </div>
+                                 {% if loginType != 'member' %}
                                 <div class="d-flex flex-wrap flex-stack">
                                     <div class="d-flex flex-column flex-grow-1 pe-8">
                                         <div class="d-flex flex-wrap">
@@ -146,6 +147,7 @@
                                     </div>
 
                                 </div>
+                                {% endif %}
                             </div>
                         </div>
                         <ul class="nav nav-stretch nav-line-tabs nav-line-tabs-2x border-transparent fs-5 fw-bolder">
@@ -161,12 +163,14 @@
                             <li class="nav-item mt-2">
                                 <a class="nav-link text-active-primary ms-0 me-10 py-5 " href="/user/profile/security">Security</a>
                             </li>
+                            {% if loginType != 'member' %}
                             <li class="nav-item mt-2">
                                 <a class="nav-link text-active-primary ms-0 me-10 py-5 active" href="/user/profile/billing">Billing</a>
                             </li>
                             <li class="nav-item mt-2">
                                 <a class="nav-link text-active-primary ms-0 me-10 py-5" href="/user/profile/paymentMethod">Payment Method</a>
                             </li>
+                            {% endif %}
                         </ul>
                     </div>
                 </div>
