--- a/views/user/profile/profile.twig
+++ b/views/user/profile/profile.twig
@@ -2,7 +2,7 @@
 {% block content %}
     <div class="content d-flex flex-column flex-column-fluid" id="kt_content">
         <div class="toolbar" id="kt_toolbar">
-            <div id="kt_toolbar_container" class="container-fluid d-flex flex-stack">
+            <div id="kt_toolbar_container" class="{% if loginType == 'client' or loginType == 'firm' %}container-fluid{% else %}container-xxl{% endif %} d-flex flex-stack">
                 <!--begin::Page title-->
                 <div data-kt-swapper="true" data-kt-swapper-mode="prepend" data-kt-swapper-parent="{default: '#kt_content_container', 'lg': '#kt_toolbar_container'}" class="page-title d-flex align-items-center flex-wrap me-3 mb-5 mb-lg-0">
                     <!--begin::Title-->
@@ -39,7 +39,7 @@
             </div>
         </div>
         <div class="post d-flex flex-column-fluid" id="kt_post">
-            <div id="kt_content_container" class="container-fluid">
+            <div id="kt_content_container" class="{% if loginType == 'client' or loginType == 'firm' %}container-fluid{% else %}container-xxl{% endif %}">
                 <div class="card mb-5 mb-xl-10">
                     <div class="card-body pt-9 pb-0">
                         <div class="d-flex flex-wrap flex-sm-nowrap mb-3">
@@ -75,6 +75,7 @@
                                     </div>
 
                                 </div>
+                                {% if loginType != 'member' %}
                                 <div class="d-flex flex-wrap flex-stack">
                                     <div class="d-flex flex-column flex-grow-1 pe-8">
                                         <div class="d-flex flex-wrap">
@@ -139,6 +140,7 @@
                                     </div>
 
                                 </div>
+                                {% endif %}
                             </div>
                         </div>
                         <ul class="nav nav-stretch nav-line-tabs nav-line-tabs-2x border-transparent fs-5 fw-bolder">
@@ -154,12 +156,14 @@
                             <li class="nav-item mt-2">
                                 <a class="nav-link text-active-primary ms-0 me-10 py-5" href="/user/profile/security">Security</a>
                             </li>
+                            {% if loginType != 'member' %}
                             <li class="nav-item mt-2">
                                 <a class="nav-link text-active-primary ms-0 me-10 py-5" href="/user/profile/billing">Billing</a>
                             </li>
                             <li class="nav-item mt-2">
                                 <a class="nav-link text-active-primary ms-0 me-10 py-5" href="/user/profile/paymentMethod">Payment Method</a>
                             </li>
+                            {% endif %}
                         </ul>
                     </div>
                 </div>
