--- a/views/user/appointment/index.twig
+++ b/views/user/appointment/index.twig
@@ -26,7 +26,7 @@
         border-color: #50cd89 !important;
     }
 </style>
-    {% if loginType != "firm" %}
+    {% if loginType != "firm" and loginType != "member" %}
     <style>
         .fc-addEventButton-button{
             display: none !important;
