--- a/views/user/dashboard.twig
+++ b/views/user/dashboard.twig
@@ -51,6 +51,11 @@
                                         </button>
                                     </li>
                                     <li class="nav-item" role="presentation">
+                                        <button class="nav-link" id="pills-profile-icon-tab" data-bs-toggle="pill" data-bs-target="#pills-profile-assigned" type="button" role="tab" aria-controls="pills-profile-icon" aria-selected="false">
+                                            <svg viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" class="css-i6dzq1"><polyline points="9 11 12 14 22 4"></polyline><path d="M21 12v7a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11"></path></svg>                                            Assigned
+                                        </button>
+                                    </li>
+                                    <li class="nav-item" role="presentation">
                                         <button class="nav-link" id="pills-profile-icon-tab" data-bs-toggle="pill" data-bs-target="#pills-profile-icon" type="button" role="tab" aria-controls="pills-profile-icon" aria-selected="false">
                                             <svg viewBox="0 0 1024 1024" focusable="false" data-icon="inbox" width="1em" height="1em" fill="currentColor" aria-hidden="true"><path d="M885.2 446.3l-.2-.8-112.2-285.1c-5-16.1-19.9-27.2-36.8-27.2H281.2c-17 0-32.1 11.3-36.9 27.6L139.4 443l-.3.7-.2.8c-1.3 4.9-1.7 9.9-1 14.8-.1 1.6-.2 3.2-.2 4.8V830a60.9 60.9 0 0060.8 60.8h627.2c33.5 0 60.8-27.3 60.9-60.8V464.1c0-1.3 0-2.6-.1-3.7.4-4.9 0-9.6-1.3-14.1zm-295.8-43l-.3 15.7c-.8 44.9-31.8 75.1-77.1 75.1-22.1 0-41.1-7.1-54.8-20.6S436 441.2 435.6 419l-.3-15.7H229.5L309 210h399.2l81.7 193.3H589.4zm-375 76.8h157.3c24.3 57.1 76 90.8 140.4 90.8 33.7 0 65-9.4 90.3-27.2 22.2-15.6 39.5-37.4 50.7-63.6h156.5V814H214.4V480.1z"></path></svg>
                                             Unassigned
@@ -142,6 +147,51 @@
                                                     </div>
                                                     <div class="table-responsive">
                                                         <table id="unassigned"  class="table table-row-dashed table-row-gray-300 align-middle gs-0 gy-4" style="width:100%">
+                                                            <thead>
+                                                            <tr class="fw-bolder text-muted">
+                                                                <th class="min-w-40px"> Id </th>
+                                                                <th class="min-w-125px">Profile</th>
+                                                                <th class="min-w-125px">Mobile No.</th>
+                                                                <th class="min-w-125px">Status</th>
+                                                                <th class="min-w-125px">Action</th>
+                                                            </tr>
+                                                            </thead>
+                                                            <tbody>
+                                                            </tbody>
+                                                        </table>
+                                                    </div>
+                                                </div>
+
+                                            </div>
+                                        </div>
+                                        {#                                Client DropDown Table#}
+                                    </div>
+                                    <div class="tab-pane fade" id="pills-profile-assigned" role="tabpanel" aria-labelledby="pills-profile-icon-tab" tabindex="0">
+                                        {#                              CLient Table#}
+                                        <div class="row layout-spacing">
+                                            <div class="col-xl-12 col-lg-12 col-sm-12  layout-spacing">
+                                                <div class="widget-content widget-content-area card">
+                                                    <div class="card-header border-0 pt-6">
+                                                        <!--begin::Card title-->
+                                                        <div class="card-title">
+                                                            <!--begin::Search-->
+                                                            <div class="d-flex align-items-center position-relative my-1">
+                                                                <!--begin::Svg Icon | path: icons/duotune/general/gen021.svg-->
+                                                                <span class="svg-icon svg-icon-1 position-absolute ms-6">
+													<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+														<rect opacity="0.5" x="17.0365" y="15.1223" width="8.15546" height="2" rx="1" transform="rotate(45 17.0365 15.1223)" fill="currentColor" />
+														<path d="M11 19C6.55556 19 3 15.4444 3 11C3 6.55556 6.55556 3 11 3C15.4444 3 19 6.55556 19 11C19 15.4444 15.4444 19 11 19ZM11 5C7.53333 5 5 7.53333 5 11C5 14.4667 7.53333 17 11 17C14.4667 17 17 14.4667 17 11C17 7.53333 14.4667 5 11 5Z" fill="currentColor" />
+													</svg>
+												</span>
+                                                                <!--end::Svg Icon-->
+                                                                <input type="text" data-kt-customer-table-filter="search" id="searchAssigned" class="form-control form-control-solid w-250px ps-15" placeholder="Search " />
+                                                            </div>
+                                                            <!--end::Search-->
+                                                        </div>
+
+                                                    </div>
+                                                    <div class="table-responsive">
+                                                        <table id="assigned"  class="table table-row-dashed table-row-gray-300 align-middle gs-0 gy-4" style="width:100%">
                                                             <thead>
                                                             <tr class="fw-bolder text-muted">
                                                                 <th class="min-w-40px"> Id </th>
@@ -265,46 +315,55 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="btn-close"></button>
                 </div>
                 <div class="modal-body scroll-y mx-5 mx-xl-5 my-7">
-                <form  method="post" id="editUploadForm" enctype="multipart/form-data">
-                    <div class="d-flex flex-column scroll-y me-n7 pe-7" id="kt_modal_add_user_scroll"
-                         data-kt-scroll="true" data-kt-scroll-activate="{default: false, lg: true}"
-                         data-kt-scroll-max-height="auto" data-kt-scroll-dependencies="#kt_modal_add_user_header"
-                         data-kt-scroll-wrappers="#kt_modal_add_user_scroll" data-kt-scroll-offset="300px"
-                         style="max-height: 570px;">
-                        <div class="fv-row mb-7 fv-plugins-icon-container">
+                    <form  method="post" id="editUploadForm" enctype="multipart/form-data">
+                        <div class="d-flex flex-column scroll-y me-n7 pe-7" id="kt_modal_add_user_scroll"
+                             data-kt-scroll="true" data-kt-scroll-activate="{default: false, lg: true}"
+                             data-kt-scroll-max-height="auto" data-kt-scroll-dependencies="#kt_modal_add_user_header"
+                             data-kt-scroll-wrappers="#kt_modal_add_user_scroll" data-kt-scroll-offset="300px"
+                             style="max-height: 570px;">
+                            <div class="fv-row mb-7 fv-plugins-icon-container">
+                                <label class="form-label">Associates</label>
+                                <select class="form-control form-control-solid" aria-label="Associates" id="associates_update_id" name="associates_update_id">
+                                    <option  disabled selected>Choose Associate</option>
+                                    {% for memberInfos in memberInfoss %}
+                                        <option value="{{ memberInfos.id }}">{{ memberInfos.fname }} {{ memberInfos.lname }}</option>
+                                    {% endfor %}
+                                </select>
+                            </div>
+                            <div class="fv-row mb-7 fv-plugins-icon-container">
                                 <label class="form-label">First name</label>
                                 <input type="text" class="form-control form-control-solid" id="fname" name="fname" placeholder="First Name">
                                 <input type="hidden" name="csrf" value="{{ csrf}}">
                                 <input type="hidden" name="id" id="id">
                             </div>
-                        <div class="fv-row mb-7 fv-plugins-icon-container">
+                            <div class="fv-row mb-7 fv-plugins-icon-container">
                                 <label class="form-label">Last name</label>
                                 <input type="text" class="form-control form-control-solid" id="lname" name="lname" placeholder="Last Name">
                             </div>
-                        <div class="fv-row mb-7 fv-plugins-icon-container">
+                            <div class="fv-row mb-7 fv-plugins-icon-container">
                                 <label class="form-label">Email adress</label>
                                 <input type="text" class="form-control form-control-solid" id="email" name="email" placeholder="Email" readonly>
                             </div>
-                        <div class="fv-row mb-7 fv-plugins-icon-container">
+                            <div class="fv-row mb-7 fv-plugins-icon-container">
                                 <label class="form-label">Phone No</label>
                                 <input type="tel" class="form-control form-control-solid" id="phone" name="phone" placeholder="Phone No">
                             </div>
-                        <div class="fv-row mb-7 fv-plugins-icon-container">
+                            <div class="fv-row mb-7 fv-plugins-icon-container">
                                 <label class="form-label">Password</label>
                                 <input type="password" class="form-control form-control-solid" id="password " name="password" placeholder="Password">
                             </div>
-                        <div class="fv-row mb-7 fv-plugins-icon-container">
+                            <div class="fv-row mb-7 fv-plugins-icon-container">
                                 <label class="form-label">Confirm Password</label>
                                 <input type="password" class="form-control form-control-solid" id="cpassword" name="cpassword" placeholder="Confirm Password">
                             </div>
                         </div>
 
-                    <div class="modal-footer justify-content-center">
-                        <button type="button"  class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                        <button type="button" name="add_new" id="btn-profile" class="btn btn-primary" onclick="update_tool()">Update</button>
-                    </div>
-                </form>
-            </div>
+                        <div class="modal-footer justify-content-center">
+                            <button type="button"  class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                            <button type="button" name="add_new" id="btn-profile" class="btn btn-primary" onclick="update_tool()">Update</button>
+                        </div>
+                    </form>
+                </div>
             </div>
         </div>
     </div>
@@ -320,7 +379,7 @@
                 },
                 "responsive": true,
                 "bProcessing": true,
-                "sAjaxSource": "/user/api?page_name=view_clients&csrf="+csrf_token,
+                "sAjaxSource": "/user/api?page_name=view_clients_dashboard&csrf="+csrf_token,
                 "bPaginate": true,
                 "sPaginationType": "full_numbers",
                 "iDisplayLength": 10,
@@ -358,6 +417,30 @@
             });
             $('#searchUnassigned').on('keyup', function() {
                 $('#unassigned').DataTable().search(this.value).draw();
+            });
+        });
+        $(document).ready(function () {
+            var csrf_token = $("input[name=csrf]").val();
+            var table = $('#assigned').dataTable({
+                "language": {
+                    processing: '<i class="fa fa-spinner fa-spin fa-3x fa-fw"></i><span class="sr-only">Loading...</span> '
+                },
+                "responsive": true,
+                "bProcessing": true,
+                "sAjaxSource": "/user/api?page_name=view_clients_assigned&csrf="+csrf_token,
+                "bPaginate": true,
+                "sPaginationType": "full_numbers",
+                "iDisplayLength": 10,
+                "aoColumns": [
+                    {mData: 'ids'},
+                    {mData: 'userView'},
+                    {mData: 'phone'},
+                    {mData: 'statusView'},
+                    {mData: 'action'},
+                ]
+            });
+            $('#searchAssigned').on('keyup', function() {
+                $('#assigned').DataTable().search(this.value).draw();
             });
         });
         $(document).ready(function () {
@@ -424,6 +507,7 @@
                     if (dataResult == 1) {
                         $('#table').DataTable().ajax.reload(null, false);
                         $('#unassigned').DataTable().ajax.reload(null, false);
+                        $('#assigned').DataTable().ajax.reload(null, false);
                         $('#inProgress').DataTable().ajax.reload(null, false);
                         $('#completed').DataTable().ajax.reload(null, false);
                         document.getElementById('btn-profile').disabled = false;
@@ -447,9 +531,11 @@
         }
         function userStatus(userID, status) {
             if(status == 0){
-                var currStatus= "block";
-            }else{
-                var currStatus= "active";
+                var currStatus= "completed";
+            }else if (status == 1){
+                var currStatus= "inprogress";
+            }else if (status == 2){
+                var currStatus= "assigned";
             }
             var el = this;
             $(this).html('<i class="fa fa-circle-o-notch fa-spin"></i> loading...');
@@ -461,12 +547,13 @@
                     status: currStatus,
                     page_name: "userStatusUpdate",
                     table_name:"users",
-                    status_table:"status",
+                    status_table:"work_status",
                     csrf: csrf_token
                 }, success: function (data) {
                     if (data == 1) {
                         toastr.success('Status Updated.');
                         $('#table').DataTable().ajax.reload(null, false);
+                        $('#assigned').DataTable().ajax.reload(null, false);
                         $('#unassigned').DataTable().ajax.reload(null, false);
                         $('#inProgress').DataTable().ajax.reload(null, false);
                         $('#completed').DataTable().ajax.reload(null, false);
@@ -493,6 +580,7 @@
                     if (data == 1) {
                         toastr.info('Successfully deleted.');
                         $('#table').DataTable().ajax.reload(null, false);
+                        $('#assigned').DataTable().ajax.reload(null, false);
                         $('#unassigned').DataTable().ajax.reload(null, false);
                         $('#inProgress').DataTable().ajax.reload(null, false);
                         $('#completed').DataTable().ajax.reload(null, false);
@@ -547,6 +635,7 @@
                     $("#btn-profile").removeAttr("disabled");
                     if (dataResult == 1) {
                         $('#table').DataTable().ajax.reload(null, false);
+                        $('#assigned').DataTable().ajax.reload(null, false);
                         $('#unassigned').DataTable().ajax.reload(null, false);
                         $('#inProgress').DataTable().ajax.reload(null, false);
                         $('#completed').DataTable().ajax.reload(null, false);
@@ -566,6 +655,35 @@
                 }
             });
         }
-
+        function openAction(userId) {
+            var actionButton = document.querySelector('button[onclick="openAction(' + userId + ')"]');
+            actionButton.classList.toggle('show');
+            var actionMenu = document.getElementById('menu-' + userId);
+            actionMenu.classList.toggle('show');
+        }
+        function openAction1(userId) {
+            var actionButton = document.querySelector('button[onclick="openAction1(' + userId + ')"]');
+            actionButton.classList.toggle('show');
+            var actionMenu = document.getElementById('menu1-' + userId);
+            actionMenu.classList.toggle('show');
+        }
+        function openAction2(userId) {
+            var actionButton = document.querySelector('button[onclick="openAction2(' + userId + ')"]');
+            actionButton.classList.toggle('show');
+            var actionMenu = document.getElementById('menu2-' + userId);
+            actionMenu.classList.toggle('show');
+        }
+        function openAction3(userId) {
+            var actionButton = document.querySelector('button[onclick="openAction3(' + userId + ')"]');
+            actionButton.classList.toggle('show');
+            var actionMenu = document.getElementById('menu3-' + userId);
+            actionMenu.classList.toggle('show');
+        }
+        function openAction4(userId) {
+            var actionButton = document.querySelector('button[onclick="openAction4(' + userId + ')"]');
+            actionButton.classList.toggle('show');
+            var actionMenu = document.getElementById('menu4-' + userId);
+            actionMenu.classList.toggle('show');
+        }
     </script>
 {% endblock %}
